         avoid any race conditions related to initializing the hashtable.
         (A similar suggestion came in from a user)
    Added 'Ignore Prepare' connection string option for disabling prepared
         statements application-wide
    Added Installer class to provide custom install type procedures such as modifying
         machine.config
         
Version 5.0.1 (Beta)

    Bugs fixed
    ----------
	  Bug #21521 # Symbols not allowed in column/table names.    
    Bug #21874 MySqlException should derive from DbException         
	  Bug #22042 mysql-connector-net-5.0.0-alpha BeginTransaction
	  Bug #22452 MySql.Data.MySqlClient.MySqlException: 	 
	
    Other changes
    -------------
    Implemented simple local transactions
    Added overloaded methods in MySqlDataReader for getting a column value right from column name
    Replaced use of .NET 2.0 compression code with open source zlib library
    Fixed compression
    Fixed some problems with GetSchema and the Indexes and IndexColumns collections
    Fixed shared memory connections
    Implemented command canceling for MySQL 5.0.0 and higher
    Fixed problem with executing a Fill after a FillSchema
    Implemented CommandTimeout for non-batch queries
    Fixed socket create code related to IPv6 (thanks Mark!)
    Added foreign key support to GetSchema
    Fixed installer to add assembly to GAC and machine.config
    
Version 5.0.1 (Alpha)

    Bugs fixed
    ----------
    Bug #6214  	CommandText: Question mark in comment line is being parsed as a parameter [fixed]

    Other changes
    -------------
    Implemented Usage Advisor
    Added Async query methods
    Reimplemented PacketReader/PacketWriter support into MySqlStream class
    Added internal implemention of SHA1 so we don't have to distribute the OpenNetCF on mobile devices    	
    Added usage advisor warnings for requesting column values by the wrong type
    Reworked connection string classes to be simpler and faster